--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 
 		<div class="mySlides fade">
 		<div class="numbertext"></div>
-			<img src="https://github.com/mikhailovich44/PizzaInWeb/ImgTitul/img4.jpg" style="width:100%">
+			<img src="https://github.com/mikhailovich44/PizzaInWeb.git/ImgTitul/img4.jpg" style="width:100%">
 		<div class="text"><i><b>"Иногда для того, чтобы сделать свой день счастливым, человеку нужно всего лишь побаловать себя любимой едой"</i></b></div>
 		</div>
 
